@@ -1,5 +1,7 @@
 package it.unipi.lsmsd.fnf.utils;
 
+import com.fasterxml.jackson.core.JsonProcessingException;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import it.unipi.lsmsd.fnf.dto.LoggedUserDTO;
 import it.unipi.lsmsd.fnf.dto.UserSummaryDTO;
 import it.unipi.lsmsd.fnf.dto.ReviewDTO;
@@ -16,6 +18,7 @@ import org.apache.commons.lang3.StringUtils;
 import org.slf4j.Logger;
 
 import java.time.LocalDate;
+import java.time.LocalDateTime;
 import java.time.ZoneId;
 import java.util.*;
 import java.util.stream.Stream;
@@ -25,28 +28,29 @@ import static org.slf4j.LoggerFactory.getLogger;
 public class ConverterUtils {
 
     // Convert Date to LocalDate
-    /**
-     * Converts a Date object to a LocalDate object.
-     * @param date The Date object to be converted.
-     * @return The LocalDate equivalent of the input Date.
-     */
     public static LocalDate dateToLocalDate(Date date) {
         if (date == null) return null;
         return date.toInstant().atZone(ZoneId.systemDefault()).toLocalDate();
     }
 
     // Convert LocalDate to Date
-    /**
-     * Converts a LocalDate object to a Date object.
-     * @param localDate The LocalDate object to be converted.
-     * @return The Date equivalent of the input LocalDate.
-     */
     public static Date localDateToDate(LocalDate localDate) {
         if (localDate == null) return null;
         return Date.from(localDate.atStartOfDay(ZoneId.systemDefault()).toInstant());
     }
 
-    //
+    // Convert Date to LocalDateTime
+    public static LocalDateTime dateToLocalDateTime(Date date) {
+        if (date == null) return null;
+        return date.toInstant().atZone(ZoneId.systemDefault()).toLocalDateTime();
+    }
+
+    // Convert LocalDateTime to Date
+    public static Date localDateTimeToDate(LocalDateTime localDateTime) {
+        if (localDateTime == null) return null;
+        return Date.from(localDateTime.atZone(ZoneId.systemDefault()).toInstant());
+    }
+
     public static String getProfilePictureUrlOrDefault(String picture, HttpServletRequest request) {
         Logger logger = getLogger(ConverterUtils.class.getName());
         if (StringUtils.isEmpty(picture)) {
@@ -141,152 +145,106 @@ public class ConverterUtils {
         return reviewDTO;
     }
 
-    /**
-     * Converts HTTP request parameters to filters for manga search.
-     * @param request The HttpServletRequest containing request parameters.
-     * @return A list of filters as Map objects.
-     */
     public static List<Map<String, Object>> fromRequestToMangaFilters(HttpServletRequest request) {
-        return Stream.of(
-                buildGenreFilter(request, "select", request.getParameter("genreOperator").equals("and")? "$all": "$in"),
-                buildGenreFilter(request, "avoid", "$nin"),
-                buildEnumFilter(request.getParameterValues("mangaTypes"), MangaType.values(), "type"),
-                buildEnumFilter(request.getParameterValues("mangaDemographics"), MangaDemographics.values(), "demographics"),
-                buildEnumFilter(request.getParameterValues("status"), MangaStatus.values(), "status"),
-                buildScoreFilter(request),
-                buildDateFilter(request)
-        )
-                .filter(filter -> !filter.isEmpty())
-                .toList();
+        try {
+            return Stream.of(
+                    buildTitleFilter(request),
+                    buildGenreFilter(request),
+                    buildDemographicsFilter(request),
+                    buildYearFilter(request),
+                    buildStatusFilter(request),
+                    buildYearRangeFilter(request),
+                    buildRatingRangeFilter(request)
+            ).filter(filter -> !filter.isEmpty()).toList();
+        } catch (IllegalArgumentException e) {
+            throw new IllegalArgumentException("Invalid JSON data for manga filters");
+        }
     }
 
-    /**
-     * Converts HTTP request parameters to filters for anime search.
-     * @param request The HttpServletRequest containing request parameters.
-     * @return A list of filters as Map objects.
-     */
     public static List<Map<String, Object>> fromRequestToAnimeFilters(HttpServletRequest request) {
-        return Stream.of(
-                        buildGenreFilter(request, "select", request.getParameter("genreOperator").equals("and")? "$all": "$in"),
-                        buildGenreFilter(request, "avoid", "$nin"),
-                        buildEnumFilter(request.getParameterValues("animeTypes"), AnimeType.values(), "type"),
-                        buildEnumFilter(request.getParameterValues("status"), AnimeStatus.values(), "status"),
-                        buildScoreFilter(request),
-                        buildYearFilter(request),
-                        buildSeasonFilter(request)
-                )
-                .filter(filter -> !filter.isEmpty())
-                .toList();
+        List<Map<String, Object>> filters = new ArrayList<>();
+        return filters;
     }
 
-    /**
-     * Builds a genre filter based on HTTP request parameters.
-     * @param request The HttpServletRequest containing request parameters.
-     * @param condition The condition for genre selection.
-     * @param operator The operator for combining genre filters.
-     * @return A Map representing the genre filter.
-     */
-    private static Map<String, Object> buildGenreFilter(HttpServletRequest request, String condition, String operator) {
-        if (request.getServletPath().equals("/mainPage/manga")) {
-            List<String> genres = Arrays.stream(Constants.MANGA_GENRES)
-                    .filter(genre -> request.getParameter(genre) != null && condition.equals(request.getParameter(genre)))
-                    .toList();
+    private static Map<String, Object> buildTitleFilter(HttpServletRequest request) {
+        String title = request.getParameter("title");
+        return !StringUtils.isEmpty(title) ? Map.of("$regex", Map.of("title", title)) : Collections.emptyMap();
+    }
 
-            return genres.isEmpty() ? Map.of() : Map.of(operator, Map.of("genres", genres));
-        } else {
-            List<String> tags = Arrays.stream(Constants.ANIME_TAGS)
-                    .filter(tag -> request.getParameter(tag) != null && condition.equals(request.getParameter(tag)))
-                    .toList();
-            return tags.isEmpty() ? Map.of() : Map.of(operator, Map.of("tags", tags));
+    private static Map<String, Object> buildGenreFilter(HttpServletRequest request) {
+        ObjectMapper mapper = new ObjectMapper();
+        Map<String, Object> genreFilter = new HashMap<>();
+
+        String genreSelectMode = request.getParameter("genreSelectMode");
+        try {
+            String[] selectedGenres = mapper.readValue(request.getParameter("genreSelected"), String[].class);
+            String[] avoidedGenres = mapper.readValue(request.getParameter("genreAvoided"), String[].class);
+            String operator = genreSelectMode.equals("and") ? "$all" : "$in";
+            if ((selectedGenres != null && selectedGenres.length > 0 && avoidedGenres != null && avoidedGenres.length > 0)) {
+                genreFilter = Map.of("$and", Arrays.asList(
+                        Map.of(operator, Map.of("genres", Arrays.asList(selectedGenres))),
+                        Map.of("$nin", Map.of("genres", Arrays.asList(avoidedGenres)))
+                ));
+            } else if (selectedGenres != null && selectedGenres.length > 0) {
+                genreFilter = Map.of(operator, Map.of("genres", Arrays.asList(selectedGenres)));
+            } else if (avoidedGenres != null && avoidedGenres.length > 0) {
+                genreFilter = Map.of("$nin", Map.of("genres", Arrays.asList(avoidedGenres)));
+            }
+            return genreFilter;
+        } catch (JsonProcessingException e) {
+            throw new IllegalArgumentException("Invalid JSON data for genre filter");
         }
     }
 
-    /**
-     * Builds an enum filter based on HTTP request parameters.
-     * @param values The values to filter on.
-     * @param enumConstants The enum constants corresponding to the filter values.
-     * @param key The key for the filter.
-     * @return A Map representing the enum filter.
-     */
-    private static Map<String, Object> buildEnumFilter(String[] values, Enum<?>[] enumConstants, String key) {
-        List<String> enumValues = Optional.ofNullable(values).stream().flatMap(Arrays::stream)
-                .filter(Objects::nonNull)
-                .filter(value -> Arrays.stream(enumConstants).anyMatch(enumValue -> value.equals(enumValue.name())))
-                .toList();
-
-        return enumValues.isEmpty() ? Map.of() : Map.of("$in", Map.of(key, enumValues));
-    }
-
-    /**
-     * Builds a score filter based on HTTP request parameters.
-     * @param request The HttpServletRequest containing request parameters.
-     * @return A Map representing the score filter.
-     */
-    private static Map<String, Object> buildScoreFilter(HttpServletRequest request) {
-        String min = request.getParameter("minScore");
-        String max = request.getParameter("maxScore");
-
-        if (StringUtils.isBlank(min) || StringUtils.isBlank(max)) return Map.of();
-
-        List<Map<String,Object>> rangeList = new ArrayList<>();
-        List<Map<String,Object>> rangeListWithNull = new ArrayList<>();
-        rangeList.add(Map.of("$gte", Map.of("average_rating", Double.parseDouble(min))));
-        rangeList.add(Map.of("$lte", Map.of("average_rating", Double.parseDouble(max))));
-        rangeListWithNull.add(Map.of("$and", rangeList));
-        rangeListWithNull.add(Map.of("$exists", Map.of("average_rating", false)));
-
-        return Map.of("$or", rangeListWithNull);
-    }
-
-    /**
-     * Builds a date filter based on HTTP request parameters.
-     * @param request The HttpServletRequest containing request parameters.
-     * @return A Map representing the date filter.
-     */
-    private static Map<String, Object> buildDateFilter(HttpServletRequest request) {
-        String startDate = request.getParameter("startDate");
-        String endDate = request.getParameter("endDate");
-        if (StringUtils.isBlank(startDate) && StringUtils.isBlank(endDate)) return Map.of();
-        else if (StringUtils.isBlank(startDate) || StringUtils.isBlank(endDate)) {
-            return startDate != null ? Map.of("start_date", Map.of("$gte", ConverterUtils.localDateToDate(LocalDate.parse(startDate)))) :
-                    Map.of("end_date", Map.of("$lte", ConverterUtils.localDateToDate(LocalDate.parse(endDate))));
-        } else {
-            List<Map<String,Object>> dateRange = new ArrayList<>();
-            dateRange.add(Map.of("$gte", Map.of("start_date", ConverterUtils.localDateToDate(LocalDate.parse(startDate)))));
-            dateRange.add(Map.of("$lte", Map.of("end_date", ConverterUtils.localDateToDate(LocalDate.parse(endDate)))));
-            return Map.of("$and", dateRange);
-        }
-    }
-
-    /**
-     * Builds a year filter based on HTTP request parameters.
-     * @param request The HttpServletRequest containing request parameters.
-     * @return A Map representing the year filter.
-     */
     private static Map<String, Object> buildYearFilter(HttpServletRequest request) {
-        String min = request.getParameter("minYear");
-        String max = request.getParameter("maxYear");
-
-        if (StringUtils.isBlank(min) || StringUtils.isBlank(max)) return Map.of();
-
-        List<Map<String,Object>> rangeList = new ArrayList<>();
-        rangeList.add(Map.of("$gte", Map.of("anime_season.year", Integer.parseInt(min))));
-        rangeList.add(Map.of("$lte", Map.of("anime_season.year", Integer.parseInt(max))));
-        return Map.of("$and", rangeList);
+        String year = request.getParameter("year");
+        return !StringUtils.isEmpty(year) ? Map.of("$and", Arrays.asList(
+                Map.of("$gte", Map.of("start_date", LocalDate.of(Integer.parseInt(year), 1, 1))),
+                Map.of("$lte", Map.of("end_date", LocalDate.of(Integer.parseInt(year), 12, 31)))
+        )) : Collections.emptyMap();
     }
 
-    /**
-     * Builds a season filter based on HTTP request parameters.
-     * @param request The HttpServletRequest containing request parameters.
-     * @return A Map representing the season filter.
-     */
-    private static Map<String, Object> buildSeasonFilter(HttpServletRequest request) {
-        String season = request.getParameter("season");
-        String year = request.getParameter("year");
-        if (StringUtils.isBlank(year)) return Map.of();
-        List<Map<String,Object>> animeSeason = new ArrayList<>();
-        animeSeason.add(Map.of("anime_season.year", Integer.parseInt(year)));
-        animeSeason.add(Map.of("anime_season.season", season));
-        return Map.of("$and", animeSeason);
+    private static Map<String, Object> buildStatusFilter(HttpServletRequest request) {
+        String status = request.getParameter("status");
+        return !StringUtils.isEmpty(status) ? Map.of("status", status) : Collections.emptyMap();
+    }
+
+    private static Map<String, Object> buildDemographicsFilter(HttpServletRequest request) {
+        String demographics = request.getParameter("demographics");
+        return !StringUtils.isEmpty(demographics) ? Map.of("demographics", demographics) : Collections.emptyMap();
+    }
+
+    private static Map<String, Object> buildFormatFilter(HttpServletRequest request) {
+        ObjectMapper mapper = new ObjectMapper();
+        try {
+            String[] formats = mapper.readValue(request.getParameter("format"), String[].class);
+            return formats != null && formats.length > 0 ? Map.of("$in", Map.of("format", Arrays.asList(formats))) : Collections.emptyMap();
+        } catch (JsonProcessingException e) {
+            throw new IllegalArgumentException("Invalid JSON data for format filter");
+        }
+    }
+
+    private static Map<String, Object> buildYearRangeFilter(HttpServletRequest request) {
+        String minYear = request.getParameter("year-rangeMin");
+        String maxYear = request.getParameter("year-rangeMax");
+        if (StringUtils.isEmpty(minYear) || StringUtils.isEmpty(maxYear)) {
+            return Collections.emptyMap();
+        }
+        return Map.of("$and", Arrays.asList(
+                Map.of("$gte", Map.of("start_date", LocalDate.of(Integer.parseInt(minYear), 1, 1))),
+                Map.of("$lte", Map.of("start_date", LocalDate.of(Integer.parseInt(maxYear), 12, 31)))
+        ));
+    }
+
+    private static Map<String, Object> buildRatingRangeFilter(HttpServletRequest request) {
+        String minRating = request.getParameter("rating-rangeMin");
+        String maxRating = request.getParameter("rating-rangeMax");
+        if (StringUtils.isEmpty(minRating) || StringUtils.isEmpty(maxRating)) {
+            return Collections.emptyMap();
+        }
+        return Map.of("$and", Arrays.asList(
+                Map.of("$gte", Map.of("average_rating", Double.parseDouble(minRating))),
+                Map.of("$lte", Map.of("average_rating", Double.parseDouble(maxRating)))
+        ));
     }
 }
